--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,7 +47,8 @@
         "react-svg/no-unused-ids-in-svg": 2,
         "react-svg/no-unused-empty-tag-in-svg": 2,
         "react-svg/no-metadata-in-svg": 2,
-        "jsx-a11y/anchor-is-valid": 0
+        "jsx-a11y/anchor-is-valid": 0,
+        "no-use-before-define":"off"
     },
     "overrides": [
         {
@@ -56,7 +57,8 @@
                 "no-unused-vars": ["off"],
                 "no-undef": ["off"],
                 "prettier/prettier": [
-                    "error", { "singleQuote": true, "endOfLine":"auto" }]
+                    "error", { "singleQuote": true, "endOfLine":"auto" }],
+                "max-classes-per-file": ["error", 5]
             }
         }
     ]
