--- a/package.json
+++ b/package.json
@@ -81,8 +81,10 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
     "axios": "^0.19.2",
     "grommet-icons": "^4.4.0",
+    "jsonwebtoken": "^8.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
