Revert "Feature/courses page"

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "esModuleInterop": true,
     // use typescript to transpile jsx to js
     "jsx": "react",
-    "baseUrl": "../likbez-admin/src",
+    "baseUrl": "../online-school-client/src",
     "lib": [
       "es2015",
       "dom.iterable",
