--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,8 +47,7 @@
         "react-svg/no-unused-ids-in-svg": 2,
         "react-svg/no-unused-empty-tag-in-svg": 2,
         "react-svg/no-metadata-in-svg": 2,
-        "jsx-a11y/anchor-is-valid": 0,
-        "no-use-before-define":"off"
+        "jsx-a11y/anchor-is-valid": 0
     },
     "overrides": [
         {
@@ -57,8 +56,7 @@
                 "no-unused-vars": ["off"],
                 "no-undef": ["off"],
                 "prettier/prettier": [
-                    "error", { "singleQuote": true, "endOfLine":"auto" }],
-                "max-classes-per-file": ["error", 5]
+                    "error", { "singleQuote": true, "endOfLine":"auto" }]
             }
         }
     ]
