--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --open --hot",
     "build": "webpack --mode production",
-    "eslint": "eslint --cache --ext .ts,.tsx src",
+    "eslint": "eslint --cache --ext .js,.jsx,.ts,.tsx src",
     "eslint:dump": "eslint --print-config ./.eslintrc.json",
-    "precommit": "lint-staged",
-    "create": "node cli/create.js --path"
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -29,7 +28,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts, tsx}": [
+    "*.{js, jsx, ts, tsx}": [
       "npm run eslint --max-warnings=0",
       "prettier --write --config prettierrc.yaml"
     ]
@@ -63,12 +62,9 @@
     "eslint-plugin-react-svg": "0.0.4",
     "exports-loader": "^1.1.0",
     "file-loader": "^6.0.0",
-    "fs": "0.0.1-security",
     "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
-    "minimist": "^1.2.5",
-    "path": "^0.12.7",
     "prettier": "2.0.5",
     "sass": "^1.26.8",
     "sass-loader": "^8.0.2",
@@ -93,8 +89,7 @@
     "redux-thunk": "^2.3.0",
     "router5": "^8.0.1",
     "router5-plugin-browser": "latest",
-    "router5-plugin-logger": "latest",
-    "styled-components": "^5.1.1"
+    "router5-plugin-logger": "latest"
   },
   "prettier": {
     "useTabs": true,
